changed phone number field in order model, more simple number input format using CharField instead of django phone number field

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -148,6 +148,14 @@
         </div>
     </div>
 </div>
+<!-- Horizontal Line -->
+<div class="container">
+    <div class="row">
+        <div class="col s12 center-align">
+            <hr class="mt-50">
+        </div>
+    </div>
+</div>
 <!-- Reviews Section -->
 <div class="container">
     <div class="section">
