--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -269,7 +269,7 @@
                                 </div>
                             </div>
                             <div class="center-align col s12">
-                                <button type="submit" class="waves-effect waves-light btn mt-20 add-to-cart-btn"><i class="material-icons left">add_shopping_cart</i>Add To Cart</button>
+                                <button type="submit" class="waves-effect waves-light btn mt-20 add-to-cart-btn pulse"><i class="material-icons left">add_shopping_cart</i>Add To Cart</button>
                             </div>
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
