--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -53,6 +53,31 @@
   background-color: #fefde5 !important;
 }
 
+/* Preloader Cirlce */
+
+#loading-overlay {
+	display: none;
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(211, 18, 69, 0.1);
+    z-index: 9999;
+}
+
+.preloader-wrapper.giant {
+    width: 300px;
+    height: 300px;
+}
+
+.center-spinner {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: block;
+}
 /* -------------------------------------Media Querries --------------- */
 
 /* Small */
