--- a/templates/includes/toasts/toast_alert.html
+++ b/templates/includes/toasts/toast_alert.html
@@ -1,7 +1,9 @@
 <script>
 function createSuccessToast(message){
-    var toastHTML = 
-        `<strong> Alert! </strong>
+    var toastHTML = `
+        <div class="orange-text text-darken-2">
+            <i class="material-icons left">error_outline</i>
+        </div>
         <div> {{message}} </div>
         <button class="btn-flat toast-action" onClick="dismissToast()">Dismiss</button>`;
     Materialize.toast(toastHTML,10000);
