--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -171,7 +171,7 @@
                                         <img class="circle quote-img" src="{{ MEDIA_URL }}no_image_available.png" alt="Product small image">
                                         {% endif %}
                                         <div class="right-align">
-                                            <h5 class="title mt-50 black-text">{{ product.name|truncatechars:10 }}</h5>
+                                            <h5 class="mt-50 black-text">{{ product.name|truncatechars:20 }}</h5>
                                         <h6 class="brown-text text-darken-3">{{ product.region.friendly_name|title }}</h6>
                                         <div class="chip mt-20">
                                             <img src="{{ MEDIA_URL }}coffee_bean_icon.png" alt="Coffee Bean Icon">
