--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -62,22 +62,24 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(211, 18, 69, 0.1);
+    background: rgba(211, 18, 69, 0.3);
     z-index: 9999;
 }
 
 .preloader-wrapper.giant {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
 }
 
-.center-spinner {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: block;
+.loader {
+    position: absolute;
+    top :0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
 }
+
 /* -------------------------------------Media Querries --------------- */
 
 /* Small */
