--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -38,7 +38,7 @@
 						</div>
 					</div>
                     <h5 class="header cyan-text text-darken-3 mt-20">Delivery Info</h5>
-					<div class="card horizontal mt-20">
+					<div class="card horizontal mt-20" id="delivery-info-form">
 						<div class="card-stacked">
                             <div class="card-content">
                             {{ order_form.phone_number | materializecss:'icon=fas fa-phone' }}
