modified comments in templates for better descriptions

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<!-- Cart Items Section -->
+<!-- Check Out Form section -->
 <div class="container">
     <div class="section">
         <div class="row">
