--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<!-- Cart Items Section -->
+<!-- Processed Order Confirmation -->
 <div class="container">
     <div class="section">
         <div class="row">
